# WebHawk-Cpp

./: .cursorrules  .env.example  .gitattributes  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  test_e2e.sh
.github/workflows/: e2e.yml
db/: init.sql
middleware/: CMakeLists.txt  Dockerfile  main.cc
middleware/src/filters/: AdminOnlyFilter.cc  AdminOnlyFilter.h  JwtAuthFilter.cc  JwtAuthFilter.h
middleware/src/repositories/: BackendRepository.cc  BackendRepository.h  SessionRepository.cc  SessionRepository.h  UserRepository.cc  UserRepository.h
middleware/src/routes/: AuthRoute.cc  AuthRoute.h  ProxyRoute.cc  ProxyRoute.h  RegistrationRoute.cc  RegistrationRoute.h
middleware/src/services/: AuthService.cc  AuthService.h  ProxyService.cc  ProxyService.h  RegistrationService.cc  RegistrationService.h  SecurityClient.cc  SecurityClient.h
middleware/src/utils/: ApiKeyGenerator.cc  ApiKeyGenerator.h  JwtHelper.cc  JwtHelper.h  PasswordHasher.cc  PasswordHasher.h
security-engine/: CMakeLists.txt  Dockerfile  main.cc
security-engine/src/repositories/: SecurityLogRepository.cc  SecurityLogRepository.h
security-engine/src/routes/: ScanRoute.cc  ScanRoute.h
security-engine/src/services/: RateLimiter.cc  RateLimiter.h  SqlInjectionDetector.cc  SqlInjectionDetector.h  StringUtils.h  XssDetector.cc  XssDetector.h
vulnerable-backend/: CMakeLists.txt  Dockerfile  main.cc
vulnerable-backend/src/routes/: VulnAdminRoute.cc  VulnAdminRoute.h  VulnLoginRoute.cc  VulnLoginRoute.h  VulnSearchRoute.cc  VulnSearchRoute.h
